# Motivue-Backend

./: .env.example  .gitignore  AGENTS.md  BASELINE_DEPLOYMENT_CHECKLIST.md  CPT.py  CPT_test.py  Dockerfile.baseline  Dockerfile.readiness  Dockerfile.weekly_report  IBF_改进计划.md  MICROSERVICE_DEPLOYMENT.md  PERSONAL_BASELINE_PLAN.md  README.md  __init__.py  agent.md  baseline_demo.py  compare_emission_cpt.py  demo_hooper_discrete_vs_continuous.py  docker-compose.yml  dynamic_model.py  dynamic_model_backup.py  iOS26_SLEEP_SCORE_TODO.md  interactive_test.py  personalization_demo_complete.py  personalization_em_demo.py  personalization_em_demo_woman.py  personalized_emission_cpt_demo_user.json  personalized_emission_cpt_demo_user_shrink.json  personalized_emission_cpt_standard_user.json  plan2.txt  readiness_service.py  readiness_state_plan.txt  requirements.txt  response_1762607068504.json  run_complete_flow_simulation.py  sim.py  simulate_10_days.py  simulate_5days_via_service.py  simulation_expected_results.md  test_70_day_complete_flow.py  (+16 more)
api/: db.py  main.py  message_example.py  server.py
backend/: __init__.py
baseline/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  QUESTIONNAIRE.md  README.md  __init__.py  api.py  auto_upgrade.py  calculator.py  models.py  service.py  storage.py  updater.py
baseline_analytics/: README.md  __init__.py  utils.py
desktop-suite/: .env.example  .gitignore  README.md  docker-compose.yml
desktop-suite/frontend/src-tauri/: Cargo.toml  tauri.conf.json
docs/: Motivue_iOS_SDK_交接文档.md  SDK数据优化计划.md  weekly_report_backend_notes.md  (+1 more)
(+255 files in other folders)
