[package]
name = "motivue-desktop-suite"
version = "0.1.0"
description = "Offline desktop shell for Motivue"
authors = ["Motivue"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
